--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -59,7 +59,48 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+
+    "d3": "^7.8.5",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
+    "socket.io-client": "^4.7.4",
+    "axios": "^1.6.7",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.8",
+
+    "simple-statistics": "^7.8.3",
+    "sentiment": "^5.0.2",
+    "ws": "^8.16.0",
+    "uuid": "^9.0.1",
+    "big.js": "^6.2.1",
+    "regression": "^2.0.1",
+    "mathjs": "^12.3.2",
+    "rxjs": "^7.8.1",
+    "eventemitter3": "^5.0.1",
+    "fuse.js": "^7.0.0",
+    "react-hotkeys-hook": "^4.4.4",
+    "react-use-websocket": "^4.8.1",
+    "ioredis": "^5.3.2",
+    "react-grid-layout": "^1.4.4",
+    "react-draggable": "^4.4.6",
+    "react-table": "^7.8.0",
+    "ag-grid-react": "^31.0.3",
+    "ag-grid-community": "^31.0.3",
+    "ag-grid-enterprise": "^31.0.3",
+    "highcharts": "^11.4.0",
+    "highcharts-react-official": "^3.2.1",
+    "lightweight-charts": "^4.1.0",
+
+    "framer-motion": "^11.0.8",
+    "zustand": "^4.5.1",
+    "immer": "^10.0.3",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -78,6 +119,21 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.14.202",
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
+    "@types/big.js": "^6.2.2",
+    "@types/three": "^0.160.0",
+    "@types/react-virtualized": "^9.21.29",
+    "@types/react-window": "^1.8.8",
+    "@types/react-grid-layout": "^1.3.5",
+    "@types/react-table": "^7.7.19",
+    "vite-plugin-pwa": "^0.19.8",
+    "vite-plugin-windicss": "^1.9.3",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "cross-env": "^7.0.3",
+    "concurrently": "^8.2.2"
   }
 }
