--- a/package.json
+++ b/package.json
@@ -39,77 +39,87 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@sentry/react": "^7.120.3",
+    "@sentry/tracing": "^7.120.3",
     "@tanstack/react-query": "^5.56.2",
+    "ag-grid-community": "^31.0.3",
+    "ag-grid-enterprise": "^31.0.3",
+    "ag-grid-react": "^31.0.3",
+    "axios": "^1.10.0",
+    "big.js": "^6.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "d3": "^7.9.0",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "eventemitter3": "^5.0.1",
+    "framer-motion": "^11.0.8",
+    "fuse.js": "^7.0.0",
+    "highcharts": "^11.4.0",
+    "highcharts-react-official": "^3.2.1",
+    "immer": "^10.0.3",
     "input-otp": "^1.2.4",
+    "ioredis": "^5.3.2",
+    "lightweight-charts": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
+    "mathjs": "^12.3.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.53.0",
+    "react-hotkeys-hook": "^4.4.4",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
-    "recharts": "^2.12.7",
+    "react-table": "^7.8.0",
+    "react-use-websocket": "^4.8.1",
+    "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.8",
+    "regression": "^2.0.1",
+    "rxjs": "^7.8.1",
+    "sentiment": "^5.0.2",
+    "simple-statistics": "^7.8.3",
+    "socket.io-client": "^4.7.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.3",
-    "zod": "^3.23.8",
-
-    "d3": "^7.8.5",
-    "d3-scale": "^4.0.2",
-    "d3-shape": "^3.2.0",
-    "socket.io-client": "^4.7.4",
-    "axios": "^1.6.7",
-    "lodash": "^4.17.21",
-    "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
-    "react-virtualized": "^9.22.5",
-    "react-window": "^1.8.8",
-
-    "simple-statistics": "^7.8.3",
-    "sentiment": "^5.0.2",
-    "ws": "^8.16.0",
     "uuid": "^9.0.1",
-    "big.js": "^6.2.1",
-    "regression": "^2.0.1",
-    "mathjs": "^12.3.2",
-    "rxjs": "^7.8.1",
-    "eventemitter3": "^5.0.1",
-    "fuse.js": "^7.0.0",
-    "react-hotkeys-hook": "^4.4.4",
-    "react-use-websocket": "^4.8.1",
-    "ioredis": "^5.3.2",
-    "react-grid-layout": "^1.4.4",
-    "react-draggable": "^4.4.6",
-    "react-table": "^7.8.0",
-    "ag-grid-react": "^31.0.3",
-    "ag-grid-community": "^31.0.3",
-    "ag-grid-enterprise": "^31.0.3",
-    "highcharts": "^11.4.0",
-    "highcharts-react-official": "^3.2.1",
-    "lightweight-charts": "^4.1.0",
-
-    "framer-motion": "^11.0.8",
-    "zustand": "^4.5.1",
-    "immer": "^10.0.3",
+    "vaul": "^0.9.3",
     "workbox-precaching": "^7.0.0",
     "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0"
+    "workbox-strategies": "^7.0.0",
+    "ws": "^8.16.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/big.js": "^6.2.2",
+    "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-grid-layout": "^1.3.5",
+    "@types/react-table": "^7.7.19",
+    "@types/react-virtualized": "^9.21.29",
+    "@types/react-window": "^1.8.8",
+    "@types/three": "^0.160.0",
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
@@ -120,20 +130,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "@types/d3": "^7.4.3",
-    "@types/lodash": "^4.14.202",
-    "@types/uuid": "^9.0.8",
-    "@types/ws": "^8.5.10",
-    "@types/big.js": "^6.2.2",
-    "@types/three": "^0.160.0",
-    "@types/react-virtualized": "^9.21.29",
-    "@types/react-window": "^1.8.8",
-    "@types/react-grid-layout": "^1.3.5",
-    "@types/react-table": "^7.7.19",
     "vite-plugin-pwa": "^0.19.8",
     "vite-plugin-windicss": "^1.9.3",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "cross-env": "^7.0.3",
-    "concurrently": "^8.2.2"
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
