--- a/requirements-basic.txt
+++ b/requirements-basic.txt
@@ -1,75 +1,56 @@
-# Core Data Science - Python 3.13 + Apple Silicon Compatible
+# Core FastAPI and web framework
+fastapi==0.108.0
+uvicorn==0.25.0
+pydantic==2.5.2
+pydantic-settings==2.1.0
+
+# Database and data handling
+sqlalchemy==2.0.25
+psycopg2-binary==2.9.9
+redis==5.0.1
+influxdb-client==1.39.0
+
+# Data analysis and ML
 numpy>=1.24.0
 pandas>=2.0.0
-scipy>=1.10.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
 scikit-learn>=1.3.0
-statsmodels>=0.14.0
-
-# Financial Data Analysis
 yfinance>=0.2.18
-pandas-datareader>=0.10.0
-backtrader>=1.9.78
+
+# HTTP and networking
+requests==2.31.0
+aiohttp==3.9.1
+websocket-client==1.7.0
+
+# Sentiment analysis and NLP
+textblob==0.17.1
+vaderSentiment==3.3.2
+newsapi-python
+
+# Financial calculations
+pandas-ta==0.3.14b0
 empyrical>=0.5.5
-pandas-ta>=0.3.14
-stockstats>=0.6.0
-finta>=1.3
+py_vollib
 
-# Web & APIs
-requests>=2.28.0
-aiohttp>=3.8.0
-fastapi>=0.95.0
-uvicorn>=0.20.0
-websocket-client>=1.6.0
-httpx>=0.24.0
-
-# Data Processing
-pydantic>=2.0.0
-python-dateutil>=2.8.0
-pytz>=2023.3
-tqdm>=4.65.0
-joblib>=1.3.0
-
-# Visualization
-plotly>=5.15.0
-dash>=2.14.0
-bokeh>=3.2.0
-
-# Database
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0
-redis>=4.5.0
-
-# Text Processing
-beautifulsoup4>=4.12.0
-nltk>=3.8.0
-textblob>=0.17.0
-
-# Development Tools
-jupyter>=1.0.0
-ipython>=8.10.0
-pytest>=7.2.0
-black>=23.0.0
-flake8>=6.0.0
+# AI/ML
+transformers
+torch
 
 # Utilities
-loguru>=0.7.0
-click>=8.1.0
-rich>=13.3.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+tqdm==4.66.1
 psutil>=5.9.0
-cryptography>=40.0.0
-bcrypt>=4.0.0
-pyjwt>=2.8.0
 
-# File Processing
-openpyxl>=3.1.0
-xlrd>=2.0.1
-python-docx>=1.1.0
+# Optional: Alpaca trading API
+alpaca-trade-api
 
-# Network Analysis
-networkx>=3.0.0
+# Optional: Additional market data
+alpha-vantage==2.3.1
 
-# Performance
-memory-profiler>=0.60.0
-line-profiler>=4.0.0 
+# Monitoring and logging
+sentry-sdk==1.39.2
+
+# Authentication and security
+bcrypt==4.1.2
+pyjwt==2.8.0
+email-validator==2.1.0 
