--- a/requirements-core.txt
+++ b/requirements-core.txt
@@ -1,20 +1,56 @@
-# Core packages that work on Python 3.13 + Apple Silicon
+# Core Requirements - Python 3.13 Compatible
+# Essential packages for the quantitative trading platform
+
+# Core Scientific Computing
 numpy>=1.24.0
 pandas>=2.0.0
 scipy>=1.10.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
 scikit-learn>=1.3.0
-requests>=2.28.0
-fastapi>=0.95.0
-uvicorn>=0.20.0
-plotly>=5.15.0
-yfinance>=0.2.18
-jupyter>=1.0.0
-ipython>=8.10.0
-websocket-client>=1.6.0
-python-dateutil>=2.8.0
-pytz>=2023.3
-tqdm>=4.65.0
-click>=8.1.0
-rich>=13.3.0 
+
+# Deep Learning
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+
+# Web Framework
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+
+# Data Validation
+pydantic>=2.5.2
+
+# HTTP Client
+requests>=2.31.0
+aiohttp>=3.9.1
+
+# Database
+sqlalchemy>=2.0.25
+alembic>=1.13.1
+psycopg2-binary>=2.9.9
+
+# Market Data
+yfinance>=0.2.28
+alpha-vantage>=2.3.1
+
+# Technical Analysis
+pandas-ta>=0.3.14b0
+
+# Visualization
+plotly>=5.17.0
+
+# Utilities
+python-dateutil>=2.8.2
+pytz>=2023.3.post1
+python-dotenv>=1.0.0
+
+# Security
+pyjwt>=2.8.0
+passlib[bcrypt]>=1.7.4
+
+# Logging
+loguru>=0.7.2
+
+# Testing
+pytest>=7.4.4
+pytest-asyncio>=0.23.2 
